[gd_scene load_steps=38 format=3 uid="uid://2wc1bqb2qqnh"]

[ext_resource type="PackedScene" uid="uid://qxc87q0q1yb" path="res://drop_zone.tscn" id="1_em5f0"]
[ext_resource type="Script" path="res://main.gd" id="1_p1vhf"]
[ext_resource type="PackedScene" uid="uid://dygi3n3btona" path="res://chairNode.tscn" id="2_rj5nx"]
[ext_resource type="PackedScene" uid="uid://bt6fwiwtbrab1" path="res://wardrobeNode.tscn" id="3_ewkub"]
[ext_resource type="PackedScene" uid="uid://cxp6g7goy1qb2" path="res://tableNode.tscn" id="4_2s3n7"]
[ext_resource type="Texture2D" uid="uid://sdtus6ihhu1l" path="res://Guide.png" id="5_6ckb8"]
[ext_resource type="Texture2D" uid="uid://bn478cobafkus" path="res://Background.png" id="6_f2lxv"]
[ext_resource type="Texture2D" uid="uid://bbu45h3egrbjf" path="res://room.png" id="7_mv62s"]
[ext_resource type="PackedScene" uid="uid://ch2tfopcgh8sh" path="res://bedNode.tscn" id="8_byvo4"]
[ext_resource type="PackedScene" uid="uid://drxwtm4aflo2y" path="res://binNode.tscn" id="10_soyjs"]
[ext_resource type="Script" path="res://button.gd" id="11_7nyf4"]
[ext_resource type="Texture2D" uid="uid://co5cj2o1lgk4e" path="res://pause_menu.png" id="12_bg5i8"]
[ext_resource type="Script" path="res://game_finish.gd" id="13_b7lcr"]
[ext_resource type="FontFile" uid="uid://ckisufape2hep" path="res://OMORI_GAME.ttf" id="13_nr7we"]
[ext_resource type="Texture2D" uid="uid://cx2btheyiqvuc" path="res://pauseHover.png" id="13_s030t"]
[ext_resource type="Script" path="res://pause.gd" id="13_sj1gd"]
[ext_resource type="Texture2D" uid="uid://cxmrbc0mdvt0j" path="res://windows_overlay.png" id="14_q6g8w"]
[ext_resource type="Texture2D" uid="uid://3p2gt4joyu31" path="res://eye_close.png" id="15_aiq4f"]
[ext_resource type="Texture2D" uid="uid://5lwpvmsfe8kj" path="res://help.png" id="15_iviw6"]
[ext_resource type="Script" path="res://help.gd" id="15_qjjon"]
[ext_resource type="Script" path="res://pause_menu.gd" id="16_00pwl"]
[ext_resource type="Texture2D" uid="uid://cno43eljuitq4" path="res://exit.png" id="16_66lie"]
[ext_resource type="Texture2D" uid="uid://5c5i4meen2uy" path="res://eye_open.png" id="16_utksj"]
[ext_resource type="Texture2D" uid="uid://dp3il5u3lkxpa" path="res://exit_bold.png" id="17_2s3hk"]
[ext_resource type="Script" path="res://texture_button.gd" id="19_g873k"]
[ext_resource type="PackedScene" uid="uid://runwfi530phu" path="res://wood_audioEffect.tscn" id="26_1gxbs"]
[ext_resource type="AudioStream" uid="uid://ck70cgcektkfb" path="res://audio_effect/button-124476.mp3" id="27_70y4m"]
[ext_resource type="AudioStream" uid="uid://df8r78yjsg8f8" path="res://audio_effect/thelicc.mp3" id="28_hlakl"]
[ext_resource type="AudioStream" uid="uid://doctl78bfiv1x" path="res://audio_effect/brush_effect/rotate1.mp3" id="28_voex7"]
[ext_resource type="AudioStream" uid="uid://cnqq7h4ptgi4q" path="res://audio_effect/brush_effect/rotate2.mp3" id="29_dsc0n"]
[ext_resource type="AudioStream" uid="uid://dnmpxie8amv2l" path="res://audio_effect/brush_effect/rotate3.mp3" id="30_400fj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aahpi"]
bg_color = Color(0, 0, 0, 0.588235)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a20bq"]
texture = ExtResource("14_q6g8w")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3btxs"]
bg_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g1017"]
bg_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5bbvp"]
texture = ExtResource("15_iviw6")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_dxd3w"]
streams_count = 3
stream_0/stream = ExtResource("28_voex7")
stream_1/stream = ExtResource("29_dsc0n")
stream_2/stream = ExtResource("30_400fj")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_p1vhf")

[node name="Room" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(576.5, 322)
scale = Vector2(0.598437, 0.587037)
texture = ExtResource("7_mv62s")
metadata/_edit_lock_ = true

[node name="drop_zone" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(-124.223, -176.951)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone2" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(62.542, -176.951)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone3" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(-61.402, -176.951)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone4" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(-0.278906, -178.674)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone5" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(121.967, -176.951)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone6" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(60.8441, -116.664)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone7" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(-61.402, -116.664)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone8" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(-122.525, -116.664)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone9" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(-122.525, -56.377)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone10" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(-61.402, -56.377)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone11" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(-0.278906, -56.377)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone12" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(123.665, -56.377)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone16" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(-122.525, 2.18762)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone17" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(64.2399, 2.18762)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone19" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(1.41896, 0.46514)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone20" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(123.665, 2.18762)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone21" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(62.542, 62.4747)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone22" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(-59.7041, 62.4747)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone24" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(-120.828, 122.762)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone25" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(-59.7041, 122.762)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone31" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(-122.525, 184.772)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone32" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(-61.402, 184.772)
scale = Vector2(1.69786, 1.72249)

[node name="drop_zone33" parent="Room" instance=ExtResource("1_em5f0")]
z_index = -1
position = Vector2(-0.278906, 184.772)
scale = Vector2(1.69786, 1.72249)

[node name="Node2D" parent="." instance=ExtResource("2_rj5nx")]
z_index = 5
position = Vector2(916, 314)

[node name="Node2D4" parent="." instance=ExtResource("3_ewkub")]
z_index = 2
position = Vector2(833, 359)

[node name="Node2D3" parent="." instance=ExtResource("4_2s3n7")]
z_index = 7
position = Vector2(878, 226)

[node name="Node2D5" parent="." instance=ExtResource("8_byvo4")]
position = Vector2(740, 230)

[node name="Guide" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.313726)
z_index = -9
position = Vector2(577.472, 324)
scale = Vector2(0.601899, 0.583333)
texture = ExtResource("5_6ckb8")
metadata/_edit_lock_ = true

[node name="Node2D2" parent="." instance=ExtResource("10_soyjs")]
position = Vector2(785, 424)

[node name="Button" type="Button" parent="."]
offset_left = 983.0
offset_top = 563.0
offset_right = 1129.0
offset_bottom = 611.0
theme_override_fonts/font = ExtResource("13_nr7we")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_aahpi")
text = "Finish Level"
script = ExtResource("11_7nyf4")

[node name="gameFinish" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("13_b7lcr")

[node name="Label" type="Label" parent="gameFinish"]
z_index = 15
offset_left = 366.0
offset_top = 148.0
offset_right = 787.0
offset_bottom = 299.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("13_nr7we")
theme_override_font_sizes/font_size = 150
text = "Good Job"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="gameFinish"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -497.0
offset_top = -423.0
offset_right = 510.0
offset_bottom = 489.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_a20bq")

[node name="retry" type="Button" parent="gameFinish"]
process_mode = 3
offset_left = 457.0
offset_top = 337.0
offset_right = 701.0
offset_bottom = 413.0
theme_override_fonts/font = ExtResource("13_nr7we")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_3btxs")
text = "Retry"

[node name="Keluar" type="Button" parent="gameFinish"]
process_mode = 3
offset_left = 460.0
offset_top = 453.0
offset_right = 706.0
offset_bottom = 501.0
theme_override_fonts/font = ExtResource("13_nr7we")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_g1017")
text = "Keluar"

[node name="pauseMenu" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("16_00pwl")

[node name="Label" type="Label" parent="pauseMenu"]
z_index = 15
offset_left = 366.0
offset_top = 148.0
offset_right = 787.0
offset_bottom = 299.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("13_nr7we")
theme_override_font_sizes/font_size = 150
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="pauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -496.0
offset_top = -423.0
offset_right = 511.0
offset_bottom = 489.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_a20bq")

[node name="retry" type="Button" parent="pauseMenu"]
process_mode = 3
offset_left = 460.0
offset_top = 332.0
offset_right = 704.0
offset_bottom = 408.0
theme_override_fonts/font = ExtResource("13_nr7we")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_3btxs")
text = "Retry"

[node name="bantuan" type="Button" parent="pauseMenu"]
process_mode = 3
offset_left = 463.0
offset_top = 422.0
offset_right = 709.0
offset_bottom = 470.0
theme_override_fonts/font = ExtResource("13_nr7we")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_g1017")
text = "Bantuan"

[node name="Keluar" type="Button" parent="pauseMenu"]
process_mode = 3
offset_left = 460.0
offset_top = 486.0
offset_right = 706.0
offset_bottom = 534.0
theme_override_fonts/font = ExtResource("13_nr7we")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_g1017")
text = "Keluar"

[node name="help" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("15_qjjon")

[node name="Panel" type="Panel" parent="help"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 81.0
offset_top = -23.0
offset_right = -65.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_5bbvp")

[node name="TextureButton" type="TextureButton" parent="help"]
offset_left = 878.0
offset_top = 485.0
offset_right = 2256.0
offset_bottom = 1863.0
scale = Vector2(0.05, 0.05)
texture_normal = ExtResource("16_66lie")
texture_hover = ExtResource("17_2s3hk")
script = ExtResource("19_g873k")

[node name="Pause" type="TextureButton" parent="."]
layout_direction = 1
offset_left = 11.0
offset_top = 11.0
offset_right = 1389.0
offset_bottom = 1389.0
scale = Vector2(0.0639726, 0.0639726)
texture_normal = ExtResource("12_bg5i8")
texture_hover = ExtResource("13_s030t")
script = ExtResource("13_sj1gd")

[node name="Visible" type="TextureButton" parent="."]
offset_left = -2.0
offset_top = 510.0
offset_right = 3473.0
offset_bottom = 3985.0
scale = Vector2(0.0474773, 0.0474773)
texture_normal = ExtResource("15_aiq4f")
texture_hover = ExtResource("16_utksj")
stretch_mode = 0

[node name="Background" type="Sprite2D" parent="."]
z_index = -25
position = Vector2(560, 274)
texture = ExtResource("6_f2lxv")
metadata/_edit_lock_ = true

[node name="wood_audioEffect" parent="." instance=ExtResource("26_1gxbs")]
visible = false

[node name="buttonClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("27_70y4m")
volume_db = -15.0

[node name="rotateEffect" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_dxd3w")
volume_db = -15.0

[node name="finish" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("28_hlakl")
pitch_scale = 2.0

[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="pressed" from="gameFinish/retry" to="gameFinish" method="_on_retry_pressed"]
[connection signal="pressed" from="gameFinish/Keluar" to="gameFinish" method="_on_keluar_pressed"]
[connection signal="pressed" from="pauseMenu/retry" to="pauseMenu" method="_on_retry_pressed"]
[connection signal="pressed" from="pauseMenu/bantuan" to="pauseMenu" method="_on_bantuan_pressed"]
[connection signal="pressed" from="pauseMenu/Keluar" to="pauseMenu" method="_on_keluar_pressed"]
[connection signal="pressed" from="help/TextureButton" to="help/TextureButton" method="_on_pressed"]
[connection signal="pressed" from="Pause" to="Pause" method="_on_pressed"]
[connection signal="pressed" from="Visible" to="." method="_on_visible_pressed"]
